--- a/index.html
+++ b/index.html
@@ -12,16 +12,24 @@
     <link rel="stylesheet" href="style.css">
 </head>
 
-<body>
-<section class="home">
+<body class="font-poppins">
+    <main class="min-h-screen bg-[url(images/background.png)] bg-no-repeat bg-center">
 
-</section>
-<section class="play-ground">
+        <section class="home min-h-screen text-white flex justify-center items-center">
+            <div class="flex flex-col items-center">
+                <h1 class="text-[170px] font-anton uppercase">ALPHABET CLASH</h1>
+                <p class="text-2xl mb-14">Unleash Your Keyboard Kung Fu : Press “Enter” to Play</p>
+                <button class=" text-[rgb(1,3,19)] bg-white text-2xl font-semibold py-3 px-6 rounded-lg">Play Now</button>
+            </div>
+        </section>
+        <section class="play-ground">
 
-</section>
-<section class="score">
-    
-</section>
+        </section>
+        <section class="score">
+
+        </section>
+
+    </main>
 </body>
 
 </html>
