--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-theme="light">
 
 <head>
     <meta charset="UTF-8">
@@ -13,23 +13,96 @@
 </head>
 
 <body class="font-poppins">
-    <main class="min-h-screen bg-[url(images/background.png)] bg-no-repeat bg-center">
+    <main class="min-h-screen bg-[url(images/background.png)] bg-no-repeat bg-center bg-[#1E1E1E]">
 
-        <section class="home min-h-screen text-white flex justify-center items-center">
+        <!-- home screen  -->
+        <section id="home" class=" min-h-screen text-white flex justify-center items-center">
             <div class="flex flex-col items-center">
-                <h1 class="text-[170px] font-anton uppercase">ALPHABET CLASH</h1>
+                <h1 class="text-[140px] font-anton uppercase">ALPHABET CLASH</h1>
                 <p class="text-2xl mb-14">Unleash Your Keyboard Kung Fu : Press “Enter” to Play</p>
-                <button class=" text-[rgb(1,3,19)] bg-white text-2xl font-semibold py-3 px-6 rounded-lg">Play Now</button>
+                <button onclick="play()" class=" text-[rgb(1,3,19)] bg-white text-2xl font-semibold py-3 px-6 rounded-lg">Play Now</button>
             </div>
         </section>
-        <section class="play-ground">
-
+        <!-- playground  -->
+        <section id="play-ground" class=" hidden">
+            <div class="flex flex-col items-center gap-20 pt-20">
+                <!-- screen  -->
+                <div class="artboard artboard-horizontal phone-6 border-[20px] rounded-2xl border-[#010313CC] bg-[#FFFFFFB3]">
+                    <div class="flex justify-center">
+                        <p class="bg-[#2F2941] px-8 pb-4 rounded-b-xl text-white">Don't watch keyboard  while playing...</p>
+                    </div>
+                    <div class="flex justify-center items-center h-full">
+                        <p id="current-alphabet" class="text-black text-9xl font-bold uppercase">Y</p>
+                    </div>
+                </div>
+                <!-- keyboard  -->
+                <div>
+                    <div class="flex justify-center gap-1 my-1 w-full">
+                        <kbd id="q" class="kbd">q</kbd>
+                        <kbd id="w" class="kbd">w</kbd>
+                        <kbd id="e" class="kbd">e</kbd>
+                        <kbd id="r" class="kbd">r</kbd>
+                        <kbd id="t" class="kbd">t</kbd>
+                        <kbd id="y" class="kbd">y</kbd>
+                        <kbd id="u" class="kbd">u</kbd>
+                        <kbd id="i" class="kbd">i</kbd>
+                        <kbd id="o" class="kbd">o</kbd>
+                        <kbd id="p" class="kbd">p</kbd>
+                      </div> 
+                      <div class="flex justify-center gap-1 my-1 w-full">
+                        <kbd id="a" class="kbd">a</kbd>
+                        <kbd id="s" class="kbd">s</kbd>
+                        <kbd id="d" class="kbd">d</kbd>
+                        <kbd id="f" class="kbd">f</kbd>
+                        <kbd id="g" class="kbd">g</kbd>
+                        <kbd id="h" class="kbd">h</kbd>
+                        <kbd id="j" class="kbd">j</kbd>
+                        <kbd id="k" class="kbd">k</kbd>
+                        <kbd id="l" class="kbd">l</kbd>
+                    </div> 
+                    <div class="flex justify-center gap-1 my-1 w-full">
+                          <kbd id="z" class="kbd">z</kbd>
+                          <kbd id="x" class="kbd">x</kbd>
+                          <kbd id="c" class="kbd">c</kbd>
+                          <kbd id="v" class="kbd">v</kbd>
+                          <kbd id="b" class="kbd">b</kbd>
+                          <kbd id="n" class="kbd">n</kbd>
+                          <kbd id="m" class="kbd">m</kbd>
+                        <kbd id="/" class="kbd">/</kbd>
+                      </div>
+                </div>
+                <!-- life & score  -->
+                <div class="flex justify-between w-3/5">
+                    <button class="btn bg-[#894189] rounded-full text-[#FFFFFF] text-xl px-7 border-none">
+                        Life
+                        <img src="./images/life.svg" alt="">
+                        <span id="current-life">5</span>
+                      </button>
+                      <button class="btn bg-[#894189] rounded-full text-[#FFFFFF] text-xl px-7 border-none">
+                        Score
+                        <img src="./images/dollor.svg" alt="">
+                        <span id="current-score">0</span>
+                      </button>
+                </div>
+            </div>
         </section>
-        <section class="score">
-
+        <!-- score  -->
+        <section id="score" class=" flex justify-center items-center min-h-screen hidden">
+            <div class="text-white text-center space-y-6 bg-[#FFFFFF33] p-10 rounded-lg">
+                <h4 class="text-3xl">Game Over !</h4>
+                <h1 class="text-8xl">
+                    <span>score: </span>
+                    <span id="final-score">0</span>
+                </h1>
+                <button onclick="play()" class="btn px-8">Play Again</button>
+                <p class="text-2xl">Practice will make you Pro</p>
+            </div>
         </section>
 
     </main>
+
+    <script src="./scripts/utility.js"></script>
+    <script src="./scripts/alpha-clash.js"></script>
 </body>
 
 </html>
